--- a/Inmobiliaria/src/main/resources/application.yml
+++ b/Inmobiliaria/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource: 
     url: jdbc:mysql://localhost:3306/inmobiliaria?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
     username: root
-    password: root
+    password: Tsernotopulos1
     driver-class-name: com.mysql.cj.jdbc.Driver 
   jpa:
     show-sql: true
