--- a/bin/Inmobiliaria/src/main/resources/application.yml
+++ b/bin/Inmobiliaria/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:  
   datasource: 
-    url: jdbc:mysql://localhost:3306/Inmobiliaria?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/inmobiliaria?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver 
